Add favicon. Improve wording to get alternative answer suggestions.

--- a/index.html
+++ b/index.html
@@ -2,24 +2,24 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/image/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Versus Info</title>
 
-    <meta name="description" content="Actualízate y desafía a otros">
+    <!-- <meta name="description" content="Actualízate y desafía a otros"> -->
 
     <!-- Open Graph Tags (Facebook/WhatsApp/most platforms) -->
-    <meta property="og:title" content="Versus Info">
-    <meta property="og:description" content="Actualízate y desafía a otros">
-    <!-- <meta property="og:image" content="https://versusinfo.com/path/to/image.jpg"> -->
-    <!-- <meta property="og:url" content="https://versusinfo.com/your-page"> -->
+    <!-- <meta property="og:title" content="Versus Info"> -->
+    <!-- <meta property="og:description" content="Actualízate y desafía a otros"> -->
+    <meta property="og:image" content="https://versus-info.web.app/icon.png">
+    <!-- <meta property="og:url" content="https://versus-info.web.app"> -->
     <meta property="og:type" content="website">
 
     <!-- Twitter Card Tags -->
     <!-- <meta name="twitter:card" content="summary_large_image"> -->
     <meta name="twitter:title" content="Versus Info">
     <meta name="twitter:description" content="Actualízate y desafía a otros">
-    <!-- <meta name="twitter:image" content="https://versusinfo.com/path/to/image.jpg"> -->
+    <meta name="twitter:image" content="https://versus-info.web.app/icon.png">
   </head>
 
   <body>
